--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
     <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
-    <div class="parallax">
-        HODL to Mars<br>
-        a place that combines Cryto and Space<br>
-    </div>
-    <div class="ss_simulation" align="center">
-        <iframe src="//plot.ly/~lvlarco/88.embed" width="950" height="500" frameborder="0" scrolling="no"></iframe>
-    </div>
+    <iframe src="ss_simulation.html" scrolling="no">
+    </iframe>
 </body>
 </html>
